k8s/eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-generator
  labels:
    app: qr-generator
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: qr-generator
  template:
    metadata:
      labels:
        app: qr-generator
        version: v1
    spec:
      containers:
        - name: qr-generator
          image: 859000334327.dkr.ecr.us-east-1.amazonaws.com/qr-code-generator:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 32Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1001
            runAsGroup: 1001
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 1001
      restartPolicy: Always
