k8s/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qr-generator-service
  labels:
    app: qr-generator
    service: qr-generator
spec:
  type: ClusterIP
  selector:
    app: qr-generator
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
